<resources>
    <string name="app_name">Amazonas</string>
    <color name="comprar">#FFFFFF</color>

    <string-array name="spinner_month">
        <item>01 - Enero</item>
        <item>02 - Febrero</item>
        <item>03 - Marzo</item>
        <item>04 - Abril</item>
        <item>05 - Mayo</item>
        <item>06 - Junio</item>
        <item>07 - Julio</item>
        <item>08 - Agosto</item>
        <item>09 - Setiembre</item>
        <item>10 - Octubre</item>
        <item>11 - Noviembre</item>
        <item>12 - Diciembre</item>
    </string-array>

    <string-array name="spinner_year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- END of Strings related to login -->
    <!-- Names of the activities -->
    <string name="title_activity_navigation">Amazonas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_usuario">Usuario</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_carrito">Carrito de Compras</string>


    <string name="nombre_usuario">Nombre Completo</string>
    <string name="email_usuario">Email</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>

    <string name="id_producto_num">ID del Producto</string>
    <string name="nombre_producto">Nombre del Producto</string>
    <string name="desc_producto">Descripcion del Producto</string>
    <string name="cant_producto">Cantidad</string>
    <string name="precio_producto">Precio</string>
    <string name="ingresar">Ingresar Producto</string>


    <string name="user_pref">usernameKey</string>
    <string name="preference_file_key">MyPrefs</string>
    <string name="default_user"> </string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>


</resources>
